出题，管理员模块代码